# diakonos

./: Cargo.toml  README.md
services/: database.service  example-web.service  worker.service
src/: client.rs  daemon.rs  error.rs  ipc.rs  main.rs  manager.rs  service.rs  unit.rs
